--- a/Inicio.html
+++ b/Inicio.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meraki</title>
+    <link rel="stylesheet" href="Inicio.css">
 </head>
 <body>
-    
+    <header>
+<h4 class="logo">MERAKI</h4>
+<div class="barraPesquisa">
+</div>
+    </header>
 </body>
 </html>
